# rules_haskell

./: BUILD.bazel  WORKSPACE  demo.bzl  demo.py
.circleci/: config.yml
docs/: haskell-use-cases.rst
haskell/: BUILD.bazel  cabal.bzl  cabal_wrapper.bzl  defs.bzl  ghc.BUILD.tpl  nixpkgs.bzl  providers.bzl  repl.bzl  toolchain.bzl
haskell/private/: cabal_wrapper.py.tpl  cabal_wrapper.sh.tpl  cabal_wrapper_debug.py.tpl  cc_wrapper.bzl  cc_wrapper.cc.tpl  cc_wrapper.py.tpl  cc_wrapper.sh.tpl  cc_wrapper_debug.py.tpl  cc_wrapper_windows.sh.tpl  context.bzl  haskell_impl.bzl
haskell/private/actions/: compile.bzl  package.bzl
tests/: BUILD.bazel
tests/template-haskell-with-cbits/: BUILD.bazel
tools/runfiles/: BUILD.bazel
tools/runfiles/src/Bazel/: Runfiles.hs
tools/runfiles/test/: Test.hs
