load("@com_github_bazelbuild_buildtools//buildifier:def.bzl", "buildifier")
load("//:demo.bzl", "demo_rule")

# Run this to check for errors in BUILD files.
buildifier(
    name = "buildifier",
    exclude_patterns = [
        "./hazel/packages.bzl",
    ],
    mode = "check",
)

# Run this to fix the errors in BUILD files.
buildifier(
    name = "buildifier-fix",
    exclude_patterns = [
        "./hazel/packages.bzl",
    ],
    mode = "fix",
    verbose = True,
)

py_binary(
    name = "demo",
    srcs = ["demo.py"],
)

demo_rule(
    name = "demo_rule",
)
